--- a/app/src/main/res/layout/reply_dashbord_reply_row.xml
+++ b/app/src/main/res/layout/reply_dashbord_reply_row.xml
@@ -7,11 +7,10 @@
     android:padding="20dp">
 
     <ImageView
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:src="@mipmap/ic_launcher_round"
         android:id="@+id/userimage"
-        />
+        android:layout_width="61dp"
+        android:layout_height="52dp"
+        android:src="@mipmap/ic_launcher_round" />
 
     <LinearLayout
           android:layout_width="match_parent"
@@ -24,7 +23,7 @@
             android:id="@+id/user_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="5dp"
+            android:paddingLeft="10dp"
             android:text="TextView"
             android:textColor="#0E0D0D"
             android:textStyle="bold" />
@@ -36,7 +35,7 @@
 
             <TextView
                 android:id="@+id/replyto"
-                android:layout_width="6dp"
+                android:layout_width="10dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:paddingLeft="10dp"
@@ -51,7 +50,7 @@
                 android:paddingLeft="5dp"
                 android:paddingRight="5dp"
                 android:text="@string/reply_user"
-                android:textColor="#FF5722" />
+                android:textColor="#03A9F4" />
         </LinearLayout>
 
         <TextView
