User can edit reply

--- a/app/src/main/res/layout/activity_reply_dashbord.xml
+++ b/app/src/main/res/layout/activity_reply_dashbord.xml
@@ -26,12 +26,10 @@
 
     <ImageView
         android:id="@+id/imageView9"
-        android:layout_width="124dp"
-        android:layout_height="110dp"
+        android:layout_width="118dp"
+        android:layout_height="58dp"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -40,33 +38,16 @@
         app:layout_constraintVertical_bias="0.629"
         app:srcCompat="@drawable/com_facebook_profile_picture_blank_portrait" />
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="132dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:text="Button"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textuserreply"
-        app:layout_constraintVertical_bias="0.152" />
-
     <TextView
         android:id="@+id/textView23"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:text="@string/user_name"
-        android:textColor="#3C5A99"
+        android:textColor="#FFFFFF"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/imageView6"
         app:layout_constraintEnd_toEndOf="parent"
@@ -75,38 +56,42 @@
 
     <EditText
         android:id="@+id/textuserreply"
-        android:layout_width="374dp"
-        android:layout_height="57dp"
+        android:layout_width="363dp"
+        android:layout_height="39dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:autoText="false"
+        android:background="@drawable/add_new_post"
         android:ems="10"
+        android:freezesText="false"
+        android:hint="@string/add_newpost"
         android:inputType="textMultiLine|textPersonName"
         android:shadowColor="#B51A1616"
-        android:text="Name"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textAlignment="center"
+        android:textColor="#B8B8B8"
+        android:textColorHint="#353535"
+        android:textColorLink="#FF5722"
+        android:textIsSelectable="false"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView6"
-        app:layout_constraintVertical_bias="0.0"
-        tools:text="post dashboard" />
+        tools:text="@string/add_newpost" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="399dp"
+        android:layout_height="421dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="68dp"
+        android:layout_marginEnd="4dp"
+        android:background="#DADADA"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.666"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textuserreply"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintTop_toBottomOf="@+id/textuserreply">
 
         <ListView
             android:id="@+id/replyListView"
