added update user profile, forgot password

--- a/app/src/main/res/layout/activity_forgotpassword.xml
+++ b/app/src/main/res/layout/activity_forgotpassword.xml
@@ -48,7 +48,7 @@
         app:layout_constraintVertical_bias="0.112" />
 
     <EditText
-        android:id="@+id/checkemail"
+        android:id="@+id/etcheckemail"
         android:layout_width="286dp"
         android:layout_height="34dp"
         android:layout_marginStart="8dp"
@@ -70,7 +70,7 @@
         app:layout_constraintVertical_bias="0.697" />
 
     <Button
-        android:id="@+id/btnsend"
+        android:id="@+id/btnemailsend"
         android:layout_width="144dp"
         android:layout_height="40dp"
         android:layout_marginStart="8dp"
