--- a/app/src/main/res/layout/question_layout.xml
+++ b/app/src/main/res/layout/question_layout.xml
@@ -2,8 +2,37 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="10dp"
+    android:layout_marginTop="15dp"
+    android:layout_marginBottom="15dp"
     >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="views"/>
+     <TextView
+         android:id="@+id/views"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:text="10"
+         android:textSize="35sp"
+         android:textColor="#050505"
+         android:layout_marginRight="10dp"
+         android:textAlignment="center"
+         android:gravity="center"
+         />
+        </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:orientation="vertical" android:layout_marginLeft="25dp" android:gravity="left"
+
+        >
 
     <TextView
         android:id="@+id/question_title"
@@ -19,16 +48,11 @@
         android:layout_height="wrap_content"
         android:text="by Lakshan Perera"
         android:textSize="15sp"
+        android:layout_marginTop="5dp"
         />
+    </LinearLayout>
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/question_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="jkbasdkjasbdj kjsaghf kjas jksagf kjasjksg fkjasgfkjasg kjasg fjkasgfkjsdbkjabsfkjbaskfjbjskabfkjahsfjb sakj b kjsahfasfkjg jkgasfkjasfjkgs afjkabs fjkb safjkbasf"
-        android:textSize="18sp"
-        android:layout_marginTop="10dp"
-        android:maxLength="100"
-        />
+
 
 </LinearLayout>
