--- a/app/src/main/res/layout/activity_main_feed.xml
+++ b/app/src/main/res/layout/activity_main_feed.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,6 +7,23 @@
     tools:context=".MainFeed">
 
 
+    <FrameLayout
+        android:id="@+id/navFrame"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/mainNavBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/gridLayout2">
+
+    </FrameLayout>
+
+    <!-- main scroll view to display the question feed -->
+
+
+    <!-- bottom navigation bar -->
     <GridLayout
         android:id="@+id/gridLayout2"
         android:layout_width="380dp"
@@ -27,21 +43,20 @@
         app:layout_constraintVertical_bias="0.01">
 
         <!-- main title -->
-        <TextView
-            android:id="@+id/logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <ImageView
+            android:id="@+id/profileIcon"
+            android:layout_width="34dp"
+            android:layout_height="32dp"
             android:layout_row="0"
-            android:layout_column="0"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="13dp"
-            android:layout_marginTop="10dp"
+            android:layout_column="3"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
+            android:layout_marginRight="0dp"
             android:layout_marginBottom="8dp"
-            android:text="@string/logoTitle"
-            android:textSize="25sp"
-            app:fontFamily="@font/stencil" />
+            android:background="@drawable/com_facebook_profile_picture_blank_portrait"
+            android:clickable="true"
+            android:contentDescription="@string/profilePicDescription" />
 
         <!--search bar-->
         <SearchView
@@ -60,26 +75,23 @@
             android:background="@drawable/round_textbox_style" />
 
         <!-- profile icon -->
-        <ImageView
-            android:id="@+id/profileIcon"
-            android:layout_width="34dp"
-            android:layout_height="32dp"
+        <TextView
+            android:id="@+id/logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_row="0"
-            android:layout_column="3"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_column="0"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="13dp"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginRight="0dp"
+            android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
-            android:background="@drawable/com_facebook_profile_picture_blank_portrait"
-            android:clickable="true"
-            android:contentDescription="@string/profilePicDescription" />
+            android:text="@string/logoTitle"
+            android:textSize="25sp"
+            app:fontFamily="@font/stencil" />
     </GridLayout>
 
-    <!-- main scroll view to display the question feed -->
-
-
-    <!-- bottom navigation bar -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/mainNavBar"
         android:layout_width="match_parent"
@@ -101,24 +113,5 @@
         app:menu="@menu/nav_items">
 
     </com.google.android.material.bottomnavigation.BottomNavigationView>
-
-    <FrameLayout
-        android:id="@+id/navFrame"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/gridLayout2"
-        app:layout_constraintVertical_bias="0.174">
-
-    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
