--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -31,6 +31,13 @@
 
         </ListView>
 
+<!--      <androidx.recyclerview.widget.RecyclerView-->
+<!--          android:id="@+id/question_list"-->
+<!--          android:layout_width="match_parent"-->
+<!--          android:layout_height="match_parent"-->
+
+<!--          />-->
+
     </LinearLayout>
 
 </FrameLayout>
