--- a/app/src/main/res/layout/question_layout.xml
+++ b/app/src/main/res/layout/question_layout.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginTop="15dp"
-    android:layout_marginBottom="15dp"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="25dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/card_view"
+    card_view:cardCornerRadius="10dp"
+    android:background="@color/browser_actions_bg_grey"
     >
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,7 +34,7 @@
          />
         </LinearLayout>
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" android:orientation="vertical" android:layout_marginLeft="25dp" android:gravity="left"
 
         >
@@ -55,4 +60,4 @@
 
 
 
-</LinearLayout>
+</androidx.cardview.widget.CardView>
