--- a/app/src/main/res/layout/activity_view_question.xml
+++ b/app/src/main/res/layout/activity_view_question.xml
@@ -42,8 +42,8 @@
 
     <TextView
         android:id="@+id/description"
-        android:layout_width="387dp"
-        android:layout_height="172dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="8dp"
@@ -63,7 +63,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.054" />
+        app:layout_constraintVertical_bias="0.023" />
 
     <View
         android:id="@+id/divider"
