--- a/app/src/main/res/layout/activity_main_feed.xml
+++ b/app/src/main/res/layout/activity_main_feed.xml
@@ -7,90 +7,24 @@
     tools:context=".MainFeed">
 
 
+    <!-- main scroll view to display the question feed -->
+
+
+    <!-- bottom navigation bar -->
     <FrameLayout
         android:id="@+id/navFrame"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/mainNavBar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/gridLayout2">
+        app:layout_constraintTop_toTopOf="parent">
 
     </FrameLayout>
-
-    <!-- main scroll view to display the question feed -->
-
-
-    <!-- bottom navigation bar -->
-    <GridLayout
-        android:id="@+id/gridLayout2"
-        android:layout_width="380dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:columnCount="4"
-        android:rowCount="1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.466"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.01">
-
-        <!-- main title -->
-        <ImageView
-            android:id="@+id/profileIcon"
-            android:layout_width="34dp"
-            android:layout_height="32dp"
-            android:layout_row="0"
-            android:layout_column="3"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="0dp"
-            android:layout_marginBottom="8dp"
-            android:background="@drawable/com_facebook_profile_picture_blank_portrait"
-            android:clickable="true"
-            android:contentDescription="@string/profilePicDescription" />
-
-        <!--search bar-->
-        <SearchView
-            android:id="@+id/searchBar"
-            android:layout_width="192dp"
-            android:layout_height="31dp"
-            android:layout_row="0"
-            android:layout_column="1"
-
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginBottom="8dp"
-            android:background="@drawable/round_textbox_style" />
-
-        <!-- profile icon -->
-        <TextView
-            android:id="@+id/logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_row="0"
-            android:layout_column="0"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="13dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginBottom="8dp"
-            android:text="@string/logoTitle"
-            android:textSize="25sp"
-            app:fontFamily="@font/stencil" />
-    </GridLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/mainNavBar"
