--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,6 +13,17 @@
         android:background="@android:color/transparent"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/heading_home"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/home_heading"
+            android:textSize="28sp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            />
+
         <ListView
             android:id="@+id/question_listview"
             android:layout_width="match_parent"
